<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="298dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/bmiButton"
        android:layout_width="316dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/bmi_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/kcalButton"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/kcal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipesButton" />

    <Button
        android:id="@+id/recipesButton"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiButton" />

    <Button
        android:id="@+id/quizButton"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kcalButton" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizButton" />
</androidx.constraintlayout.widget.ConstraintLayout>